# autoware_universe_common

./: .clang-tidy-ci  README.md  build_depends_nightly.repos  build_depends_stable.repos  packages_above.repos
.github/: CODEOWNERS
.github/workflows/: build-and-test-differential.yaml  build-and-test-packages-above-differential.yaml  build-and-test-reusable.yaml  clang-tidy-differential.yaml  cppcheck-differential.yaml  cppcheck.yaml  generate-build-cache.yaml  mirror-awf.yaml  rebase-to-full-universe.yaml
common/autoware_agnocast_wrapper/: package.xml
common/autoware_auto_common/: CHANGELOG.rst  package.xml
common/autoware_boundary_departure_checker/: CHANGELOG.rst  CMakeLists.txt  package.xml
common/autoware_boundary_departure_checker/include/autoware/boundary_departure_checker/: uncrossable_boundary_departure_checker.hpp  utils.hpp
common/autoware_boundary_departure_checker/src/: uncrossable_boundary_departure_checker.cpp  utils.cpp
common/autoware_boundary_departure_checker/test/: test_plot_utils.cpp  test_plot_utils.hpp  test_uncrossable_boundary_checker.cpp
common/autoware_component_interface_specs_universe/: CHANGELOG.rst  package.xml
common/autoware_component_interface_tools/: CHANGELOG.rst  CMakeLists.txt  package.xml
common/autoware_component_interface_tools/launch/: service_log_checker.launch.xml
common/autoware_component_interface_tools/src/: service_log_checker.cpp  service_log_checker.hpp
common/autoware_component_interface_utils/: CHANGELOG.rst  package.xml
common/autoware_cuda_dependency_meta/: CHANGELOG.rst  package.xml
common/autoware_deprecated_boundary_departure_checker/: CHANGELOG.rst  package.xml
common/autoware_fake_test_node/: CHANGELOG.rst  package.xml
common/autoware_glog_component/: CHANGELOG.rst  package.xml
common/autoware_goal_distance_calculator/: CHANGELOG.rst  package.xml
common/autoware_grid_map_utils/: CHANGELOG.rst  package.xml
common/autoware_obstacle_proximity_checker/: CMakeLists.txt  README.md  package.xml
common/autoware_obstacle_proximity_checker/include/autoware/obstacle_proximity_checker/: obstacle_proximity_checker.hpp  structs.hpp
common/autoware_obstacle_proximity_checker/src/: obstacle_proximity_checker.cpp
common/autoware_obstacle_proximity_checker/test/: test_obstacle_proximity_checker.cpp
common/autoware_path_distance_calculator/: CHANGELOG.rst  package.xml
common/autoware_polar_grid/: CHANGELOG.rst  package.xml
common/autoware_time_utils/: CHANGELOG.rst  package.xml
common/autoware_traffic_light_compliance_checker/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
common/autoware_traffic_light_compliance_checker/include/autoware/traffic_light_compliance_checker/: structs.hpp  traffic_light_compliance_checker.hpp  traffic_light_status_tracker.hpp
common/autoware_traffic_light_compliance_checker/src/: traffic_light_compliance_checker.cpp  traffic_light_status_tracker.cpp
common/autoware_traffic_light_recognition_marker_publisher/: CHANGELOG.rst  Readme.md  package.xml
common/autoware_traffic_light_utils/: CHANGELOG.rst  package.xml
common/autoware_universe_designs/: CHANGELOG.rst  package.xml
common/autoware_universe_designs/design/control/: AutonomousModeTransitionFlag.node.yaml  AutowareJoyController.node.yaml  ControlPerformanceAnalysis.node.yaml  SphericCollisionDetector.node.yaml  StopModeOperator.node.yaml
common/autoware_universe_designs/design/localization/autoware_ar_tag_based_localizer/: ArTagBasedLocalizer.node.yaml
common/autoware_universe_designs/design/localization/autoware_geo_pose_projector/: GeoPoseProjector.node.yaml
common/autoware_universe_designs/design/localization/autoware_lidar_marker_localizer/: LidarMarkerLocalizer.node.yaml
common/autoware_universe_designs/design/localization/autoware_localization_error_monitor/: LocalizationErrorMonitor.node.yaml
common/autoware_universe_designs/design/localization/autoware_pose_covariance_modifier/: PoseCovarianceModifier.node.yaml
common/autoware_universe_designs/design/localization/autoware_pose_estimator_arbiter/: PoseEstimatorArbiter.node.yaml
common/autoware_universe_designs/design/localization/autoware_pose_instability_detector/: PoseInstabilityDetector.node.yaml
common/autoware_universe_utils/: CHANGELOG.rst  package.xml
common/tier4_api_utils/: CHANGELOG.rst  package.xml
(+48 files in other folders)
