<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_obstacle_proximity_checker</name>
  <version>0.50.0</version>
  <description>Library for checking nearby obstacles around the ego vehicle</description>
  <maintainer email="alqudah.mohammad@tier4.jp">Alqudah Mohammad</maintainer>
  <maintainer email="satoshi.ota@tier4.jp">Satoshi Ota</maintainer>
  <maintainer email="takumi.odashima@tier4.jp">Takumi Odashima</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <depend>autoware_perception_msgs</depend>
  <depend>autoware_universe_utils</depend>
  <depend>autoware_utils</depend>
  <depend>autoware_vehicle_info_utils</depend>
  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>libpcl-all-dev</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>unique_identifier_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
