<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_traffic_light_compliance_checker</name>
  <version>0.52.0</version>
  <description>Library for checking trajectory compliance with traffic lights</description>
  <maintainer email="alqudah.mohammad@tier4.jp">Alqudah Mohammad</maintainer>
  <maintainer email="maxime.clement@tier4.jp">Maxime Clement</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_interpolation</depend>
  <depend>autoware_lanelet2_utils</depend>
  <depend>autoware_motion_utils</depend>
  <depend>autoware_perception_msgs</depend>
  <depend>autoware_planning_msgs</depend>
  <depend>autoware_traffic_light_utils</depend>
  <depend>autoware_vehicle_info_utils</depend>
  <depend>boost</depend>
  <depend>lanelet2_core</depend>
  <depend>rclcpp</depend>
  <depend>tl_expected</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
